Sure! Please provide the list of code changes, and I'll craft a concise and comprehensive commit message for you.
Sure! Please provide the list of code changes, and I'll craft a concise and comprehensive commit message for you.

--- a/App.config
+++ b/App.config
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
+    <startup>	
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
 	<connectionStrings>
 		<add name="MyConnection"
-		connectionstring="Data Source=DESKTOP-IU534U3\SQLEXPRESS.;Initial Catalog=SistemDataSiswa_sas;intergrated Security=True"
+		connectionstring="Data Source=DESKTOP-3C0JNRR;Initial Catalog=SistemDataSiswa_sas;intergrated Security=True"
 		providerName="System.Data.sqlClient"/>
 	</connectionStrings>
 </configuration>
