hehe this is the final one (i hope)

--- a/App.config
+++ b/App.config
@@ -5,7 +5,7 @@
     </startup>
 	<connectionStrings>
 		<add name="MyConnection"
-		connectionstring="Data Source=DESKTOP-3C0JNRR;Initial Catalog=SistemDataSiswa_sas;intergrated Security=True"
+		connectionstring="Data Source=.;Initial Catalog=SistemDataSiswa_sas;intergrated Security=True"
 		providerName="System.Data.sqlClient"/>
 	</connectionStrings>
 </configuration>
