ini ka, gatau deh

--- a/App.config
+++ b/App.config
@@ -4,8 +4,16 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
 	<connectionStrings>
-		<add name="MyConnection"
-		connectionstring="Data Source=.;Initial Catalog=SistemDataSiswa_sas;intergrated Security=True"
-		providerName="System.Data.sqlClient"/>
+	<configuration>
+			<connectionStrings>
+				<add name="KoneksiUtama"
+					 connectionString="Data Source=.;Initial Catalog=NamaDatabase;Integrated Security=True"
+					 providerName="System.Data.SqlClient" />
+
+				<add name="KoneksiCadangan"
+					 connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=NamaDatabase;Integrated Security=True"
+					 providerName="System.Data.SqlClient" />
+			</connectionStrings>
+		</configuration>
 	</connectionStrings>
 </configuration>
